--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,7 +62,7 @@ unit-test-job:
 #    - cp /usr/local/etc/php/php.ini{-development,}
 #    - echo 'xdebug.mode=coverage' >> /usr/local/etc/php/php.ini
     - vendor/bin/codecept build
-    - vendor/bin/codecept run Acceptance --env ci,chrome --env ci,firefox
+    - vendor/bin/codecept run Unit
 
 #functional-test-job:
 #  stage: test
