fix(autoload,composer): try to fix namespace to htfx

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "LGPL3-or-later",
     "autoload": {
         "psr-4": {
-            "mkuettel\\htfx\\": "src/"
+            "htfx\\": "src/"
         }
     },
     "authors": [
