feature(autoload,htfx): add main module & make sure to load everything at once for the prelude things to work

--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "type": "library",
     "license": "LGPL3-or-later",
     "autoload": {
-        "psr-4": {
-            "htfx\\": "src/"
-        }
+        "files": [
+            "src/htfx.php"
+        ]
     },
     "authors": [
         {
