--- a/codeception.yml
+++ b/codeception.yml
@@ -7,6 +7,11 @@ paths:
     support: tests/Support
     envs: tests/_envs
 actor_suffix: Tester
+coverage:
+    enabled: true
+    show_only_summary: false
+    include:
+        - src/*
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
